--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -12,4 +12,4 @@ stages:
 Job 1:
   tasks:
     - script:
-        - echo 'Hello from the other side'
+        -  chmod +x ./qualiti-script.sh &&  bash ./qualiti-script.sh
