--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -1,6 +1,6 @@
 version: 2
 plan:
-  project-key: ANISH
+  project-key: RIJU
   key: PLAN
   name: My Plan
 
@@ -12,4 +12,4 @@ stages:
 Job 1:
   tasks:
     - script:
-        -  chmod +x ./qualiti-script.sh &&  bash ./qualiti-script.sh
+        - echo 'Hello from YAML Specs helo helo'
