--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -1,6 +1,6 @@
 version: 2
 plan:
-  project-key: RIJU
+  project-key: MARS
   key: PLAN
   name: My Plan
 
@@ -12,4 +12,4 @@ stages:
 Job 1:
   tasks:
     - script:
-        - echo 'Hello from the other side :D'
+        - echo 'Hello from YAML Specs'
